--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,6 @@ dependencies = [
   "urllib3>=2.0.0",
   "datasets",
   "colorlog>=6.9.0",
-  "codegen-sdk-pink>=0.1.0",
   "codegen-api-client",
 ]
 
@@ -115,6 +114,7 @@ keywords = [
 codegen = "codegen.cli.cli:main"
 
 [project.optional-dependencies]
+pink = ["codegen-sdk-pink>=0.1.0"]
 types = [
   "types-networkx>=3.2.1.20240918",
   "types-tabulate>=0.9.0.20240106",
