--- a/.github/actions/release-pypi/action.yml
+++ b/.github/actions/release-pypi/action.yml
@@ -1,15 +1,9 @@
 name: "Release PyPI"
 description: "Release PyPI"
-inputs:
-  pypi-token:
-    required: true
-    description: "PyPI token"
 runs:
   using: "composite"
   steps:
     - name: Release PyPI
       shell: bash
       run: |
-        export UV_PUBLISH_PASSWORD="${{ inputs.pypi-token }}"
-        export UV_PUBLISH_USERNAME="__token__"
-        uv publish --publish-url https://upload.pypi.org/legacy/
+        uv publish --publish-url https://upload.pypi.org/legacy/ --trusted-publishing always
