fix(ci): permissions for release workflow (#22)

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -75,6 +75,7 @@ jobs:
     uses: ./.github/workflows/release.yml
     permissions:
       contents: write
+      id-token: write
     secrets: inherit
     with:
       release-tag: ${{ needs.semantic-version.outputs.release-tag }}
