fix: changelog workflow (#33)
# Motivation

<!-- Why is this change necessary? -->

# Content

<!-- Please include a summary of the change -->

# Testing

<!-- How was the change tested? -->

# Please check the following before marking your PR as ready for review

- [ ] I have added tests for my changes
- [ ] I have updated the documentation or added new documentation as
needed

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Generate changelog
         env:
           OPEN_AI_TOKEN: ${{ secrets.OPEN_AI_TOKEN }}
-        run: uv run python src/gscli/cli.py generate changelog --openai-key ${{ secrets.OPEN_AI_TOKEN }}
+        run: uv run python src/graph_sitter/gscli/cli.py generate changelog --openai-key ${{ secrets.OPEN_AI_TOKEN }}
 
       - name: Commit changes
         run: |
