--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
             ubuntu-latest,
             ubuntu-22.04-arm, # https://github.com/actions/partner-runner-images/issues/37 https://github.com/orgs/community/discussions/148648#discussioncomment-12099554
             macos-latest,
-            macos-14-large,
+            macos-13,
           ]
         python: [12, 13]
 
