Revert "misc: Disable pre commit renovate autoupdates (#481)" (#39)
This reverts commit 6f037f9ab350c569677756a16508509df0c5967c.

--- a/renovate.json5
+++ b/renovate.json5
@@ -5,10 +5,10 @@
     ":automergeLinters",
     ":automergeMinor",
     ":automergePatch",
-    // ":enablePreCommit",
+    ":enablePreCommit",
     ":maintainLockFilesWeekly",
-    "group:githubArtifactActions",
-    "schedule:automergeWeekly"
+    ":automergeLinters",
+    "group:githubArtifactActions"
   ],
   lockFileMaintenance: {
     enabled: true,
