--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -62,7 +62,7 @@ cli:
   plugins:
     pycoverage:
       report_type: "json"
-      include_contexts: true
+      # include_contexts: true
   runners:
     pytest:
       coverage_root: "./"
