refactor: Use @graph_sitter (#49)
- **rename to CliSession**
- **update to use @graph_sitter**

---------

Co-authored-by: Codegen Team (Internal) <135641899+codegen-team@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,6 +160,7 @@ dev-dependencies = [
   "modal>=0.73.25",
   "pytest-lsp>=1.0.0b1",
   "cython>=3.0.11",
+  "pytest-split>=0.10.0",
 ]
 
 [tool.uv.workspace]
