--- a/examples/pyproject.toml
+++ b/examples/pyproject.toml
@@ -3,7 +3,7 @@ name = "examples"
 version = "0.0.0"
 readme = "README.md"
 requires-python = ">=3.12, <3.14"
-dependencies = ["codegen>0.6.0"]
+dependencies = ["graph_sitter>0.6.0"]
 license = { file = "LICENSE" }
 classifiers = [
   "License :: OSI Approved :: Apache Software License",
@@ -34,8 +34,8 @@ dev-dependencies = [
 [tool.uv.workspace]
 members = ["examples/swebench_agent_run"]
 
+[tool.uv.sources]
+graph-sitter = { path = "../", editable = true }
+
 [tool.pre-commit-uv]
 requirements = ["strict-requirements"]
-
-[tool.deptry]
-package_module_name_map.codegen = "codegen"
